; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.3/src/extr_lbaselib.c_finishpcall.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.3/src/extr_lbaselib.c_finishpcall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_OK = common dso_local global i32 0, align 4
@LUA_YIELD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i64)* @finishpcall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @finishpcall(i32* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @LUA_OK, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @LUA_YIELD, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @lua_pushboolean(i32* %16, i32 0)
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @lua_pushvalue(i32* %18, i32 -2)
  store i32 2, i32* %4, align 4
  br label %26

20:                                               ; preds = %11, %3
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @lua_gettop(i32* %21)
  %23 = load i64, i64* %7, align 8
  %24 = trunc i64 %23 to i32
  %25 = sub nsw i32 %22, %24
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %20, %15
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_gettop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
